# libbruteforce

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  rust.yml
example/: Cargo.toml
examples/: algorithm_selection.rs  bench.rs  minimal_example.rs
src/: benchmark.rs  indices.rs  lib.rs  symbols.rs  util.rs  worker_threads.rs
src/crack/: indices.rs  mod.rs  parameter.rs  result.rs  worker_threads.rs
src/hash_fncs/: identity.rs  md5.rs  mod.rs  sha1.rs  sha256.rs
src/parameter/: basic.rs  internal.rs  mod.rs  target_hash.rs
src/symbols/: builder.rs  mod.rs
src/testutil/: mod.rs
src/transform_fns/: identity.rs  md5.rs  mod.rs  sha1.rs  sha256.rs
src/transformation_fns/: identity.rs  md5.rs  mod.rs  sha1.rs  sha256.rs
src/util/: mod.rs
