[package]
name = "libbruteforce"
version = "4.0.1"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
license = "MIT"
description = '''
This library helps you to brute force hashes (e.g. passwords). It includes a set of pre-configured
hashing functions, like md5 or sha256. You can also provide your own hashing function. PLEASE DO NOT
use this software to harm someones privacy in any kind! This project was made for fun and for teaching myself
new things about Rust.
'''
homepage = "https://github.com/phip1611/libbruteforce"
repository = "https://github.com/phip1611/libbruteforce"
documentation = "https://docs.rs/libbruteforce/"
readme = "README.md"
keywords = ["bruteforce", "hashes", "passwords"]
categories = ["algorithms"]
rust-version = "1.70.0"
exclude = [
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
log = "0.4"
hex = "0.4"

# for examples
[dev-dependencies]
simple_logger = "2.1"

[profile.dev]
# With this, examples and tests run faster by a lot by default.
# this comes with the downside, that the debugger doesn't really work anymore.
opt-level = 1

[profile.release]
# everything for maximum performance
# https://doc.rust-lang.org/cargo/reference/profiles.html
# only differences from default settings
codegen-units = 1
lto = true
